# eos-desktop-extension

./: .editorconfig  .eslintrc.json  .gitignore  README.md  dirs.js.in  extension.js  meson.build  metadata.json.in  settings.js  stylesheet.scss  utils.js
.tx/: config
debian/: changelog  control  copyright  files
lint/: eslintrc-gjs.yml
migration/: org.gnome.shell.gschema.xml
po/: LINGUAS  POTFILES.in  ar.po  as.po  bn.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  es.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  lv.po  meson.build  mjw.po  mr.po  ms.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sv.po  sw.po  (+9 more)
schemas/: com.endlessm.desktop-extension.gschema.xml  org.gnome.shell.gschema.xml
ui/: appDisplay.js  appSystem.js  dash.js  iconGridLayout.js  internetSearch.js  keybindings.js  layout.js  overview.js  overviewControls.js  panel.js  search.js  viewSelector.js  workspace.js  workspaceMonitor.js
